@@ -1,3 +1,13 @@
+2005-08-07  Chia I Wu  <b90201047@ntu.edu.tw>
+
+	* src/core/termsel.h (PageBound, Bound): Removed qualifier in
+	declaration.
+
+	* src/appconfig.cpp,
+	src/appconfig.h,
+	src/mainframe.cpp: 
+	New config option `CompactLayout'.
+
 2005-08-06  Youchen Lee	<youchen.lee@gmail.com>
 
 	* src/Makefile.am: 
